<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <EditText
        android:id="@+id/activity_main_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inputNombre"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/activity_main_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_main_name"
        android:hint="@string/inputTelefono"
        android:inputType="phone" />

    <TextView
        android:id="@+id/activity_main_text_escolaridad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_main_phone"
        android:text="@string/inputEscolaridad"
        android:textColor="@color/colorTypography"
        android:textSize="8pt"
        android:layout_marginTop="6dp"/>

    <Spinner
        android:id="@+id/activity_main_spinner_escolaridad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_main_text_escolaridad"
        android:entries="@array/opcionesEscolaridad" />

    <TextView
        android:id="@+id/activity_main_genero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_main_spinner_escolaridad"
        android:text="@string/inputGenero"
        android:textColor="@color/colorTypography"
        android:textSize="8pt"
        android:layout_marginTop="6dp"/>

    <RadioGroup
        android:id="@+id/activity_main_radiogroup_genero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_main_genero">
        <RadioButton
            android:id="@+id/activity_main_femenino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inputGeneroFemenino"
            android:checked="true"
            android:textSize="8pt" />
        <RadioButton
            android:id="@+id/activity_main_masculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="8pt"
            android:text="@string/inputGeneroMasculino"/>
    </RadioGroup>

    <TextView
        android:id="@+id/activity_main_librofavorito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_main_radiogroup_genero"
        android:text="@string/inputLibroFavorito"
        android:textColor="@color/colorTypography"
        android:textSize="8pt"
        android:layout_marginTop="6dp"/>

    <AutoCompleteTextView
        android:id="@+id/activity_main_textview_librofavorito"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_main_librofavorito"/>

    <CheckBox
        android:id="@+id/activity_main_checkbox_practicadeporte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_main_textview_librofavorito"
        android:text="@string/inputPracticaDeporte"
        android:checked="false"/>

    <Button
        android:id="@+id/activity_main_btn_limpiar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/btnLimpiar"/>

</RelativeLayout>

